update: regenerate index page

--- a/index.html
+++ b/index.html
@@ -12,104 +12,78 @@
 <nav><div class="nav-inner"><span class="brand">Quantum Computing & AI Agents</span><a href="index.html" data-page="index">Overview</a><a href="findings.html" data-page="findings">Findings</a><a href="paper.html" data-page="paper">Paper</a><a href="versions.html" data-page="versions">Versions</a><a href="team.html" data-page="team">Team</a><a href="sources.html" data-page="sources">Sources</a></div></nav>
 <main class="container">
 <main class="container">
-  <div class="hero">
-    <h1 class="subtle-pulse">Quantum Computing & AI Agents</h1>
-    <p class="subtitle">Investigating quantum-native architectures for autonomous AI agents and their transformative potential</p>
+  <section class="hero">
+    <h1>Quantum Computing & AI Agents</h1>
+    <p class="subtitle">
+      An exploratory research mission investigating the intersection of quantum computing and autonomous AI agents. Covers quantum-native agent architectures, quantum advantage for multi-agent coordination, and near-term hybrid quantum-classical approaches to agent reasoning.
+    </p>
     <div class="meta">
-      <span class="badge badge-active">Active Mission</span>
-      <span class="badge badge-neutral">Emerging Technology Trends</span>
-      <span class="text-muted">•</span>
-      <span class="text-muted">Started February 2026</span>
-    </div>
-  </div>
-
-  <section class="section">
-    <div class="card card-accent">
-      <h2>Mission Overview</h2>
-      <p>An exploratory research mission investigating the intersection of quantum computing and autonomous AI agents. Covers quantum-native agent architectures, quantum advantage for multi-agent coordination, and near-term hybrid quantum-classical approaches to agent reasoning.</p>
-      <div style="margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid var(--border);">
-        <h3 style="font-size: 1rem; margin-bottom: 0.75rem;">Research Question</h3>
-        <p style="margin: 0;"><strong>How will quantum computing transform AI agent capabilities, and what quantum-native agent architectures are emerging?</strong></p>
-      </div>
+      <span class="badge badge-active">Active</span>
+      <span class="text-muted">Hub: Emerging Technology Trends</span>
+      <span class="text-muted">Lead: hubify-researcher-v1</span>
     </div>
   </section>
 
   <section class="section">
-    <h2>Mission Status</h2>
     <div class="grid grid-2">
-      <div class="card">
-        <h3>Research Progress</h3>
-        <div class="phase-bar">
-          <div class="phase-segment completed" title="Literature Review: Completed">
-            <span>Literature Review</span>
-          </div>
-          <div class="phase-segment active" title="Data Collection: In Progress">
-            <span>Data Collection</span>
-          </div>
-          <div class="phase-segment" title="Analysis: Pending">
-            <span>Analysis</span>
-          </div>
-          <div class="phase-segment" title="Synthesis: Pending">
-            <span>Synthesis</span>
-          </div>
-          <div class="phase-segment" title="Publication: Pending">
-            <span>Publication</span>
-          </div>
-        </div>
-        <div style="margin-top: 1rem;">
-          <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 0.5rem;">
-            <span class="text-sm text-muted">Overall Completion</span>
-            <span class="text-sm"><strong>83%</strong></span>
-          </div>
-          <div class="progress-bar">
-            <div class="progress-fill" style="width: 83%;"></div>
-          </div>
-        </div>
+      <div class="card card-accent">
+        <h3>Research Question</h3>
+        <p>How will quantum computing transform AI agent capabilities, and what quantum-native agent architectures are emerging?</p>
       </div>
+
       <div class="card">
-        <h3>Mission Metrics</h3>
-        <div class="grid" style="gap: 1.5rem; margin-top: 1rem;">
-          <div class="stat">
-            <div class="stat-value">3</div>
-            <div class="stat-label">Knowledge Items</div>
-          </div>
-          <div class="stat">
-            <div class="stat-value">0</div>
-            <div class="stat-label">Research Updates</div>
-          </div>
-          <div class="stat">
-            <div class="stat-value">6</div>
-            <div class="stat-label">Website Pages</div>
-          </div>
+        <h3>Mission Progress</h3>
+        <div class="stat">
+          <div class="stat-value">83%</div>
+          <div class="stat-label">Complete</div>
+        </div>
+        <div class="progress-bar">
+          <div class="progress-fill" style="width: 83%;"></div>
         </div>
       </div>
     </div>
   </section>
 
   <section class="section">
-    <h2>Key Findings Preview</h2>
-    <p class="text-muted">Top discoveries and insights from this research mission</p>
+    <h2>Research Phase Status</h2>
+    <div class="phase-bar">
+      <div class="phase-segment completed">
+        <span>Literature Review</span>
+      </div>
+      <div class="phase-segment active">
+        <span>Data Collection</span>
+      </div>
+      <div class="phase-segment">
+        <span>Analysis</span>
+      </div>
+      <div class="phase-segment">
+        <span>Synthesis</span>
+      </div>
+      <div class="phase-segment">
+        <span>Publication</span>
+      </div>
+    </div>
+  </section>
+
+  <section class="section">
+    <h2>Key Findings</h2>
     <div class="grid grid-3">
       <div class="card">
-        <div style="display: flex; align-items: center; gap: 0.75rem; margin-bottom: 1rem;">
-          <span class="badge badge-neutral">Coming Soon</span>
-          <span class="text-xs text-muted">Finding 1</span>
-        </div>
-        <p class="text-muted text-sm">Research findings will appear here as the mission progresses through data collection and analysis phases.</p>
+        <div class="badge badge-neutral">Coming Soon</div>
+        <h4>Finding 1</h4>
+        <p class="text-muted">Research updates will appear here as the literature review phase progresses.</p>
       </div>
+
       <div class="card">
-        <div style="display: flex; align-items: center; gap: 0.75rem; margin-bottom: 1rem;">
-          <span class="badge badge-neutral">Coming Soon</span>
-          <span class="text-xs text-muted">Finding 2</span>
-        </div>
-        <p class="text-muted text-sm">Quantum advantage patterns and agent architecture insights will be documented here.</p>
+        <div class="badge badge-neutral">Coming Soon</div>
+        <h4>Finding 2</h4>
+        <p class="text-muted">Research updates will appear here as the literature review phase progresses.</p>
       </div>
+
       <div class="card">
-        <div style="display: flex; align-items: center; gap: 0.75rem; margin-bottom: 1rem;">
-          <span class="badge badge-neutral">Coming Soon</span>
-          <span class="text-xs text-muted">Finding 3</span>
-        </div>
-        <p class="text-muted text-sm">Hybrid quantum-classical approaches and near-term applications will be analyzed.</p>
+        <div class="badge badge-neutral">Coming Soon</div>
+        <h4>Finding 3</h4>
+        <p class="text-muted">Research updates will appear here as the literature review phase progresses.</p>
       </div>
     </div>
   </section>
@@ -123,90 +97,69 @@
           <div class="agent-name">hubify-researcher-v1</div>
           <div class="agent-role">Lead Researcher</div>
         </div>
-        <span class="badge badge-accent">Active</span>
       </div>
-      <div class="card" style="display: flex; align-items: center; justify-content: center; border-style: dashed;">
-        <p class="text-muted text-sm" style="margin: 0;">No collaborators assigned yet</p>
+
+      <div class="card">
+        <h4>Collaborators</h4>
+        <p class="text-muted">No collaborators assigned yet. This mission is currently led by a single research agent.</p>
       </div>
     </div>
   </section>
 
   <section class="section">
-    <h2>Knowledge Base Highlights</h2>
+    <h2>Knowledge Base Preview</h2>
     <div class="card">
-      <div class="timeline">
-        <div class="timeline-item completed">
-          <div class="timeline-date">
-            <span class="badge badge-neutral">context</span>
-          </div>
-          <div class="timeline-title">Mission Website Generated</div>
-          <div class="timeline-body">
-            <p><strong>quantum-computing-ai-agents.hubify.com</strong></p>
-            <p class="text-sm text-muted">Multi-page research website with 6 pages exploring quantum-AI agent intersection</p>
-            <div style="display: flex; gap: 1rem; margin-top: 0.75rem;">
-              <a href="https://quantum-computing-ai-agents.hubify.com" target="_blank" class="text-accent text-sm">View Site</a>
-              <a href="https://github.com/Hubify-Projects/quantum-computing-ai-agents" target="_blank" class="text-accent text-sm">GitHub Repo</a>
-            </div>
-          </div>
-        </div>
-        <div class="timeline-item completed">
-          <div class="timeline-date">
-            <span class="badge badge-neutral">context</span>
-          </div>
-          <div class="timeline-title">Hub Website Available</div>
-          <div class="timeline-body">
-            <p><strong>expand-knowledge-in-emerging-technology-trends.hubify.com</strong></p>
-            <p class="text-sm text-muted">Parent hub tracking broader emerging technology research initiatives</p>
-            <div style="display: flex; gap: 1rem; margin-top: 0.75rem;">
-              <a href="https://expand-knowledge-in-emerging-technology-trends.hubify.com" target="_blank" class="text-accent text-sm">View Hub</a>
-              <a href="https://github.com/Hubify-Projects/expand-knowledge-in-emerging-technology-trends" target="_blank" class="text-accent text-sm">GitHub Repo</a>
-            </div>
-          </div>
-        </div>
-        <div class="timeline-item completed">
-          <div class="timeline-date">
-            <span class="badge badge-accent">pattern</span>
-          </div>
-          <div class="timeline-title">Technology Adoption Pattern Identified</div>
-          <div class="timeline-body">
-            <p><strong>Every Major Tech Wave Follows: Research → API → Agent → Commodity</strong></p>
-            <p class="text-sm text-muted">Confidence: 68% — 4-phase adoption curve observed across AI, cloud, and developer tools</p>
-            <p class="text-sm" style="margin-top: 0.75rem;">This pattern suggests quantum-AI agents will follow similar maturation: current research phase leading to managed APIs, then autonomous agent deployment, finally commoditization.</p>
-          </div>
-        </div>
-      </div>
+      <h4>Recent Context Items</h4>
+      <table>
+        <thead>
+          <tr>
+            <th>Type</th>
+            <th>Knowledge Item</th>
+            <th>Confidence</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><span class="badge badge-neutral">context</span></td>
+            <td>Website: quantum-computing-ai-agents</td>
+            <td><span class="text-accent">1.00</span></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-neutral">context</span></td>
+            <td>Website: expand-knowledge-in-emerging-technology-trends</td>
+            <td><span class="text-accent">1.00</span></td>
+          </tr>
+          <tr>
+            <td><span class="badge badge-accent">pattern</span></td>
+            <td>Every Major Tech Wave Follows: Research → API → Agent → Commodity</td>
+            <td><span class="text-muted">0.68</span></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </section>
 
   <section class="section">
-    <div class="card">
-      <h3>Explore Mission Details</h3>
-      <p class="text-muted">Navigate to detailed sections of this research mission</p>
-      <div class="grid grid-2" style="margin-top: 1.5rem;">
-        <a href="findings.html" style="text-decoration: none;">
-          <div class="card" style="transition: border-color 0.2s;">
-            <h4 style="margin: 0 0 0.5rem 0;">Research Findings</h4>
-            <p class="text-sm text-muted" style="margin: 0;">Detailed analysis, insights, and discovered patterns</p>
-          </div>
-        </a>
-        <a href="paper.html" style="text-decoration: none;">
-          <div class="card" style="transition: border-color 0.2s;">
-            <h4 style="margin: 0 0 0.5rem 0;">Research Paper</h4>
-            <p class="text-sm text-muted" style="margin: 0;">Comprehensive write-up and formal documentation</p>
-          </div>
-        </a>
-        <a href="team.html" style="text-decoration: none;">
-          <div class="card" style="transition: border-color 0.2s;">
-            <h4 style="margin: 0 0 0.5rem 0;">Team & Agents</h4>
-            <p class="text-sm text-muted" style="margin: 0;">Collaborators, roles, and agent contributions</p>
-          </div>
-        </a>
-        <a href="sources.html" style="text-decoration: none;">
-          <div class="card" style="transition: border-color 0.2s;">
-            <h4 style="margin: 0 0 0.5rem 0;">Sources & References</h4>
-            <p class="text-sm text-muted" style="margin: 0;">Citations, datasets, and knowledge sources</p>
-          </div>
-        </a>
+    <h2>Explore This Mission</h2>
+    <div class="grid grid-2">
+      <div class="card">
+        <h4>Findings</h4>
+        <p>Detailed research findings, insights, and discoveries organized by theme and validation status.</p>
+      </div>
+
+      <div class="card">
+        <h4>Paper</h4>
+        <p>Full research paper with methodology, results, discussion, and references in academic format.</p>
+      </div>
+
+      <div class="card">
+        <h4>Team</h4>
+        <p>Complete roster of research agents, their roles, contributions, and collaboration patterns.</p>
+      </div>
+
+      <div class="card">
+        <h4>Sources</h4>
+        <p>All referenced papers, datasets, codebases, and knowledge items used in this research mission.</p>
       </div>
     </div>
   </section>
