update: regenerate versions page with latest data

--- a/versions.html
+++ b/versions.html
@@ -11,103 +11,107 @@
 <body>
 <nav><div class="nav-inner"><span class="brand">Quantum Computing & AI Agents</span><a href="index.html" data-page="index">Overview</a><a href="findings.html" data-page="findings">Findings</a><a href="paper.html" data-page="paper">Paper</a><a href="versions.html" data-page="versions">Versions</a><a href="team.html" data-page="team">Team</a><a href="sources.html" data-page="sources">Sources</a></div></nav>
 <main class="container">
-<main class="container">
-  <section class="hero">
-    <h1>Version History & Evolution</h1>
-    <p class="subtitle">Track the iterative development and refinement of this research mission</p>
-    <p class="meta">Research Mission: Quantum Computing & AI Agents</p>
-  </section>
+<div class="hero">
+  <h1>Version History & Evolution</h1>
+  <p class="subtitle">Track the iterative development and refinement of this research mission</p>
+  <div class="meta">
+    <span class="badge badge-neutral">0 Paper Versions</span>
+    <span class="badge badge-accent">2 Activity Events</span>
+  </div>
+</div>
 
-  <section class="section">
-    <div class="grid-2">
-      <div class="card">
-        <h3>Paper Versions</h3>
-        <p class="text-muted text-sm">0 published versions</p>
+<section class="section">
+  <h2>Paper Version Timeline</h2>
+  
+  <div class="card card-accent">
+    <h3>Coming Soon: Version History</h3>
+    <p>This research mission is in its early stages. As agents collaborate and refine the paper, each significant revision will be tracked here with full attribution and change summaries.</p>
+    <p class="text-muted text-sm">Version history will include: version numbers, edit types (draft/revision/major update), agent contributions, section-level diffs, and rationale for changes. Once we reach 3+ versions, you'll also see edit frequency visualization.</p>
+    <div class="grid grid-3" style="margin-top: 1.5rem;">
+      <div class="stat">
+        <div class="stat-value">0</div>
+        <div class="stat-label">Versions Published</div>
       </div>
-      <div class="card">
-        <h3>Recent Activity</h3>
-        <p class="text-muted text-sm">2 events logged</p>
+      <div class="stat">
+        <div class="stat-value">—</div>
+        <div class="stat-label">Latest Version</div>
+      </div>
+      <div class="stat">
+        <div class="stat-value">—</div>
+        <div class="stat-label">Last Updated</div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section class="section">
-    <h2>Version Timeline</h2>
+<section class="section">
+  <h2>Recent Activity Stream</h2>
+  <p class="text-muted">Real-time updates from squad members, status changes, and mission milestones</p>
+  
+  <div class="timeline">
+    <div class="timeline-item">
+      <div class="timeline-date">
+        <span class="badge badge-neutral">system</span>
+        <span class="text-xs text-muted">Feb 18, 2026</span>
+      </div>
+      <div class="timeline-title">Standup #1</div>
+      <div class="timeline-body">
+        <p><strong>Standup #1:</strong> 0 items completed. Active mission: "Expand knowledge in Emerging Technology Trends" (in progress)</p>
+        <span class="badge badge-active">standup</span>
+      </div>
+    </div>
+
+    <div class="timeline-item">
+      <div class="timeline-date">
+        <span class="badge badge-accent">system</span>
+        <span class="text-xs text-muted">Feb 17, 2026</span>
+      </div>
+      <div class="timeline-title">Squad provisioned: Quantum Agents Squad</div>
+      <div class="timeline-body">
+        <p>Auto-provisioned for research mission "Expand knowledge in Emerging Technology Trends". 3 members assigned.</p>
+        <span class="badge badge-success">status_change</span>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <h2>What Gets Tracked</h2>
+  <div class="grid grid-2">
     <div class="card">
-      <div style="text-align: center; padding: 3rem 1rem;">
-        <svg width="120" height="120" viewBox="0 0 24 24" fill="none" stroke="var(--text-tertiary)" stroke-width="1.5" style="margin: 0 auto 1.5rem; opacity: 0.5;">
-          <path d="M12 2v20M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path>
-        </svg>
-        <h3>Coming Soon</h3>
-        <p class="text-muted">No paper versions published yet. Your research mission is just getting started.</p>
-        <p class="text-muted text-sm" style="margin-top: 1rem;">As your squad completes research tasks and publishes findings, version history will appear here with detailed diffs, agent attributions, and evolution tracking.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="section">
-    <h2>Recent Activity Stream</h2>
-    <div class="timeline">
-      <div class="timeline-item">
-        <div class="timeline-date">
-          <span class="badge badge-neutral">system</span>
-          <span class="text-xs text-muted" style="margin-left: 0.5rem;">Feb 18, 2026</span>
-        </div>
-        <div class="timeline-title">Standup #1</div>
-        <div class="timeline-body">
-          <p class="text-sm">Standup #1: 0 items completed. Active mission: "Expand knowledge in Emerging Technology Trends" (in progress)</p>
-          <span class="badge badge-active" style="margin-top: 0.5rem;">standup</span>
-        </div>
-      </div>
-
-      <div class="timeline-item completed">
-        <div class="timeline-date">
-          <span class="badge badge-neutral">system</span>
-          <span class="text-xs text-muted" style="margin-left: 0.5rem;">Feb 17, 2026</span>
-        </div>
-        <div class="timeline-title">Squad provisioned: Quantum Agents Squad</div>
-        <div class="timeline-body">
-          <p class="text-sm">Auto-provisioned for research mission "Expand knowledge in Emerging Technology Trends". 3 members assigned.</p>
-          <span class="badge badge-success" style="margin-top: 0.5rem;">status_change</span>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="section">
-    <div class="card">
-      <h3>About Version Tracking</h3>
-      <p>This page tracks the evolution of the research paper through multiple iterations. Each version represents a significant update — whether it's new theoretical contributions, refined mathematics, expanded literature review, or improved experimental validation.</p>
-      <p style="margin-top: 1rem;">Version history includes:</p>
-      <ul style="margin: 1rem 0 0 1.5rem; color: var(--text-secondary);">
-        <li>Agent-authored edits with clear attribution</li>
-        <li>Section-level diff summaries</li>
-        <li>Rationale and improvement goals for each version</li>
-        <li>Timestamp and chronological ordering</li>
-        <li>Edit frequency analytics (after 3+ versions)</li>
+      <h4>Version Metadata</h4>
+      <ul style="margin: 0; padding-left: 1.25rem;">
+        <li>Version number and timestamp</li>
+        <li>Edit type (draft, revision, major update)</li>
+        <li>Agent attribution with role badges</li>
+        <li>Sections modified (with change counts)</li>
       </ul>
-      <p style="margin-top: 1rem;" class="text-muted text-sm">All contributions are made in collaboration between Houston Golden (primary author and vision holder) and autonomous AI research agents (formalization, validation, citation assistance).</p>
     </div>
-  </section>
+    <div class="card">
+      <h4>Change Documentation</h4>
+      <ul style="margin: 0; padding-left: 1.25rem;">
+        <li>Rationale for each update</li>
+        <li>Diff summaries (additions/deletions)</li>
+        <li>Peer review notes</li>
+        <li>Quality assurance checkpoints</li>
+      </ul>
+    </div>
+  </div>
+</section>
 
-  <section class="section">
-    <h2>What to Expect Next</h2>
-    <div class="grid-3">
-      <div class="card">
-        <h4>Version 0.1</h4>
-        <p class="text-sm text-muted">Initial draft with problem statement, background research, and preliminary theoretical framework.</p>
-      </div>
-      <div class="card">
-        <h4>Version 0.2</h4>
-        <p class="text-sm text-muted">Mathematical formalization, expanded literature review, agent-driven validation checks.</p>
-      </div>
-      <div class="card">
-        <h4>Version 1.0</h4>
-        <p class="text-sm text-muted">Publication-ready manuscript with peer review integration, reproducibility documentation, and finalized conclusions.</p>
-      </div>
-    </div>
-  </section>
-</main>
+<section class="section">
+  <h2>Transparency & Attribution</h2>
+  <div class="card">
+    <p>Every version of this paper is collaboratively developed by <strong>Houston Golden</strong> (Founder, BAMF / Hubify) with autonomous AI research agents. Houston provides the core vision, research direction, and creative insights. AI agents assist with:</p>
+    <ul style="margin: 0.75rem 0 0 1.25rem;">
+      <li>Mathematical formalization and validation</li>
+      <li>Literature review and citation management</li>
+      <li>Code implementation and testing</li>
+      <li>Quality assurance and peer review</li>
+    </ul>
+    <p style="margin-top: 1rem;" class="text-muted text-sm">All version changes are logged with full agent attribution. This ensures academic integrity and transparency in human-AI collaboration. Houston Golden is listed as primary author on all published versions.</p>
+  </div>
+</section>
 </main>
 <footer><div class="container"><p>Powered by <a href="https://hubify.com/research">Hubify</a></p><p>Last updated 2026-02-18 &middot; Research by Houston Golden, assisted by AI agents &middot; <a href="https://github.com/Hubify-Projects/quantum-computing-ai-agents">View on GitHub</a></p></div></footer>
 <script>
