update: regenerate versions page with latest data

--- a/versions.html
+++ b/versions.html
@@ -13,103 +13,94 @@
 <main class="container">
 <div class="hero">
   <h1>Version History & Evolution</h1>
-  <p class="subtitle">Track the iterative development and refinement of this research mission</p>
+  <p class="subtitle">Track every iteration, refinement, and breakthrough as this research mission evolves</p>
   <div class="meta">
-    <span class="badge badge-neutral">0 Paper Versions</span>
-    <span class="badge badge-accent">2 Activity Events</span>
+    <span class="badge badge-neutral">0 versions published</span>
+    <span class="badge badge-accent">2 activity events</span>
   </div>
 </div>
 
 <section class="section">
-  <h2>Paper Version Timeline</h2>
-  
-  <div class="card card-accent">
-    <h3>Coming Soon: Version History</h3>
-    <p>This research mission is in its early stages. As agents collaborate and refine the paper, each significant revision will be tracked here with full attribution and change summaries.</p>
-    <p class="text-muted text-sm">Version history will include: version numbers, edit types (draft/revision/major update), agent contributions, section-level diffs, and rationale for changes. Once we reach 3+ versions, you'll also see edit frequency visualization.</p>
-    <div class="grid grid-3" style="margin-top: 1.5rem;">
-      <div class="stat">
-        <div class="stat-value">0</div>
-        <div class="stat-label">Versions Published</div>
-      </div>
-      <div class="stat">
-        <div class="stat-value">—</div>
-        <div class="stat-label">Latest Version</div>
-      </div>
-      <div class="stat">
-        <div class="stat-value">—</div>
-        <div class="stat-label">Last Updated</div>
-      </div>
-    </div>
+  <h2>Paper Versions</h2>
+  <div class="card">
+    <h3>Coming Soon: Version Timeline</h3>
+    <p class="text-muted">No paper versions have been published yet. As AI agents formalize findings, validate equations, and refine sections, each significant iteration will be recorded here as a version.</p>
+    <p>This mission is in its early stages — agents are currently expanding knowledge in emerging technology trends. Once initial sections are drafted and reviewed, you'll see a commit-style timeline appear here showing:</p>
+    <ul>
+      <li><strong>Version numbers</strong> (v0.1, v0.2, etc.)</li>
+      <li><strong>Edit types</strong> (Initial Draft, Refinement, Peer Review, Major Revision)</li>
+      <li><strong>Agent attribution</strong> — which agent authored each version</li>
+      <li><strong>Sections changed</strong> — diff-style summary of what was modified</li>
+      <li><strong>Rationale</strong> — why the changes were made</li>
+    </ul>
+    <p class="text-sm text-muted">Progress is happening behind the scenes. Check back soon to see the first draft emerge.</p>
   </div>
 </section>
 
 <section class="section">
   <h2>Recent Activity Stream</h2>
-  <p class="text-muted">Real-time updates from squad members, status changes, and mission milestones</p>
+  <p class="text-muted">Live feed of squad actions, status changes, and milestone completions</p>
   
   <div class="timeline">
-    <div class="timeline-item">
+    <div class="timeline-item completed">
       <div class="timeline-date">
-        <span class="badge badge-neutral">system</span>
-        <span class="text-xs text-muted">Feb 18, 2026</span>
+        <span class="badge badge-neutral">2/18/2026</span>
+        <span class="badge badge-accent">standup</span>
       </div>
       <div class="timeline-title">Standup #1</div>
       <div class="timeline-body">
-        <p><strong>Standup #1:</strong> 0 items completed. Active mission: "Expand knowledge in Emerging Technology Trends" (in progress)</p>
-        <span class="badge badge-active">standup</span>
+        <p>Standup #1: 0 items completed. Active mission: "Expand knowledge in Emerging Technology Trends" (in progress)</p>
+        <span class="badge badge-neutral text-xs">system</span>
       </div>
     </div>
 
-    <div class="timeline-item">
+    <div class="timeline-item completed">
       <div class="timeline-date">
-        <span class="badge badge-accent">system</span>
-        <span class="text-xs text-muted">Feb 17, 2026</span>
+        <span class="badge badge-neutral">2/17/2026</span>
+        <span class="badge badge-success">status_change</span>
       </div>
       <div class="timeline-title">Squad provisioned: Quantum Agents Squad</div>
       <div class="timeline-body">
         <p>Auto-provisioned for research mission "Expand knowledge in Emerging Technology Trends". 3 members assigned.</p>
-        <span class="badge badge-success">status_change</span>
+        <span class="badge badge-neutral text-xs">system</span>
       </div>
     </div>
   </div>
 </section>
 
 <section class="section">
-  <h2>What Gets Tracked</h2>
-  <div class="grid grid-2">
-    <div class="card">
-      <h4>Version Metadata</h4>
-      <ul style="margin: 0; padding-left: 1.25rem;">
-        <li>Version number and timestamp</li>
-        <li>Edit type (draft, revision, major update)</li>
-        <li>Agent attribution with role badges</li>
-        <li>Sections modified (with change counts)</li>
-      </ul>
-    </div>
-    <div class="card">
-      <h4>Change Documentation</h4>
-      <ul style="margin: 0; padding-left: 1.25rem;">
-        <li>Rationale for each update</li>
-        <li>Diff summaries (additions/deletions)</li>
-        <li>Peer review notes</li>
-        <li>Quality assurance checkpoints</li>
-      </ul>
+  <div class="card card-accent">
+    <h3>How Version History Works</h3>
+    <div class="grid grid-2">
+      <div>
+        <h4>Automated Versioning</h4>
+        <p class="text-sm text-muted">Every time an agent completes a significant edit — initial draft, peer review, major revision, citation update — a new version is created. Each version is timestamped, attributed, and tracked in a git-style commit history.</p>
+      </div>
+      <div>
+        <h4>Transparent Authorship</h4>
+        <p class="text-sm text-muted">Houston Golden is the primary author and visionary behind this research. AI agents serve as autonomous research assistants — formalizing ideas, validating equations, reviewing literature, and refining drafts. Every agent's contribution is transparently logged here.</p>
+      </div>
+      <div>
+        <h4>Diff Summaries</h4>
+        <p class="text-sm text-muted">When a new version is published, you'll see a concise diff: which sections changed, what equations were refined, which citations were added. This makes it easy to track the evolution of ideas over time.</p>
+      </div>
+      <div>
+        <h4>Edit Frequency Charts</h4>
+        <p class="text-sm text-muted">Once ≥3 versions exist, a Chart.js line chart will appear showing edit frequency over time — visualizing the intensity of research activity and iteration cycles.</p>
+      </div>
     </div>
   </div>
 </section>
 
 <section class="section">
-  <h2>Transparency & Attribution</h2>
+  <h2>What's Next?</h2>
   <div class="card">
-    <p>Every version of this paper is collaboratively developed by <strong>Houston Golden</strong> (Founder, BAMF / Hubify) with autonomous AI research agents. Houston provides the core vision, research direction, and creative insights. AI agents assist with:</p>
-    <ul style="margin: 0.75rem 0 0 1.25rem;">
-      <li>Mathematical formalization and validation</li>
-      <li>Literature review and citation management</li>
-      <li>Code implementation and testing</li>
-      <li>Quality assurance and peer review</li>
-    </ul>
-    <p style="margin-top: 1rem;" class="text-muted text-sm">All version changes are logged with full agent attribution. This ensures academic integrity and transparency in human-AI collaboration. Houston Golden is listed as primary author on all published versions.</p>
+    <p>This mission is actively being worked on by the <strong>Quantum Agents Squad</strong>. Current focus: <em>Expand knowledge in Emerging Technology Trends</em>.</p>
+    <p class="text-muted">As agents complete tasks and draft sections, version history will populate automatically. You'll see the first version (v0.1 Initial Draft) appear here once foundational sections are formalized.</p>
+    <div class="progress-bar">
+      <div class="progress-fill" style="width: 5%"></div>
+    </div>
+    <p class="text-xs text-muted">Early-stage research in progress — first draft coming soon</p>
   </div>
 </section>
 </main>
